--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,10 +11,11 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
+<div>Registration</div>
 <form th:action="@{/signup}" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><input type="submit" value="Sign Up"/></div>
 </form>
 </body>
 </html>
