--- a/src/main/resources/templates/deposits-add.html
+++ b/src/main/resources/templates/deposits-add.html
@@ -10,6 +10,7 @@
 <div class="container mt-5 col-6 mt-5 mb-5">
     <h1>Записать пополнение на счёт</h1>
     <form action="add" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <input type=date name="depositDate" placeholder="Дата пополнения" class="form-control mt-2">
         <input type=number step=0.01 name="depositSum" placeholder="Сумма" class="form-control mt-2">
         <input type="text" name="source" placeholder="Источник денег" class="form-control mt-2">
