--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -15,14 +15,12 @@
                     <li><a href="/deposits" class="nav-link px-2 text-white">Пополнения</a></li>
                 </ul>
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                    <input type="search" class="form-control form-control-dark" placeholder="Search..."
-                           aria-label="Search">
-                </form>
-
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-warning">Sign-up</button>
+                        <button onclick="window.location.href='/login';" type="button"
+                                class="btn btn-outline-light me-2">Login
+                        </button>
+                    <button onclick="window.location.href='/signup';" type="button" class="btn btn-warning">Sign-up
+                    </button>
                 </div>
             </div>
         </div>
