--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,20 +2,60 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Login to Deposits Tracker</title>
 </head>
-<body>
+<body class="text-center bg-dark text-white col">
 <div th:if="${param.error}">
     Invalid username and password.
 </div>
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
-<a href="/signup">Sign up</a>
+<div class="container mt-5 col-lg-3 col-md-4 col-sm-4">
+    <main class="form-signin">
+        <form th:action="@{/login}" method="post">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <div class="form-floating h3 mb-3 fw-normal">
+                <input class="form-control" id="floatingInput" type="text" name="username"
+                       value="demo" onblur="if(value=='') value = 'demo'" onfocus="if(value=='demo') value = ''"/>
+            </div>
+            <div class="form-floating h3 mb-3 fw-normal">
+                <input class="form-control" id="floatingPassword" type="password" name="password"
+                       value="demo" onblur="if(value=='') value = 'demo'" onfocus="if(value=='demo') value = ''"/>
+            </div>
+            <button class=" btn btn-lg btn-primary" type="submit"/>
+            Sign In</button>
+        </form>
+    </main>
+</div>
+
+<!--<div class="container mt-5 col-3">-->
+<!--    <main class="form-signin">-->
+<!--        <form th:action="@{/login}" method="post">-->
+<!--            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>-->
+
+<!--            <div class="form-floating h3 mb-3 fw-normal">-->
+<!--                <input type="login" name="login" class="form-control" id="floatingInput" placeholder="name@example.com">-->
+<!--                &lt;!&ndash;                <label for="floatingInput" name="username">demo</label>&ndash;&gt;-->
+<!--            </div>-->
+<!--            <div class="form-floating h3 mb-3 fw-normal">-->
+<!--                <input type="password" name="password" class="form-control" id="floatingPassword"-->
+<!--                       placeholder="Password">-->
+<!--                &lt;!&ndash;                <label for="floatingPassword" name="password">demo</label>&ndash;&gt;-->
+<!--            </div>-->
+
+<!--            <div class="checkbox mb-3">-->
+<!--                <label>-->
+<!--                    <input type="checkbox" value="remember-me"> Remember me-->
+<!--                </label>-->
+<!--            </div>-->
+<!--            <button class="w-100 btn btn-lg btn-primary" type="submit" value="Sign In">Sign in</button>-->
+<!--        </form>-->
+<!--    </main>-->
+<!--</div>-->
+<div style="padding-top: 20px">
+    <p>If you're a new user &mdash; <a href="/signup">Sign up</a></p>
+</div>
 </body>
 </html>
